Removed wsdottraffic module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,10 @@
         "-p",
         "test*.py"
     ],
-    "python.unitTest.unittestEnabled": true,
-    "python.pythonPath": "C:/Program Files/ArcGIS/Pro/bin/Python/envs/arcgispro-py3/python"
+    "python.unitTest.unittestEnabled": false,
+    "python.pythonPath": "C:/Program Files/ArcGIS/Pro/bin/Python/envs/arcgispro-py3/python",
+    "python.unitTest.promptToConfigure": false,
+    "python.unitTest.pyTestEnabled": false,
+    "python.unitTest.nosetestsEnabled": false,
+    "python.autoComplete.extraPaths": ["${workspaceRoot}/wsdot-traffic-gp"]
 }
