--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.exclude": {
+        "**/__pycache__": true,
         "{Data,Index}": true,
         "**/.git": true,
         "**/.svn": true,
